--- a/style.css
+++ b/style.css
@@ -4,14 +4,13 @@ body {
     background-color: #ffffff;
     color: #EEEEEE;
     font-family: Arial, sans-serif;
-    display: block;
     text-align: center;
 }
 
 .container {
     max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+    margin: auto;
+    margin-top: 25vh;
 }
 
 h1 {
@@ -22,4 +21,20 @@ h1 {
 p {
     font-size: 16px;
     line-height: 1.5;
+}
+
+button {
+    width: 15rem;
+    height: 2rem;
+    display: block;
+    margin: 3px auto;
+    border-radius: 9px;
+}
+
+button#start {
+    background-color: green;
+}
+
+button#stop {
+    background-color: red;
 }
